Modificando estilos en componente de busqueda (AddCategory)

--- a/src/styles.css
+++ b/src/styles.css
@@ -19,10 +19,10 @@ input {
 }
 
 button {
-    margin: 10px 0px;
     padding: 10px 10px;
     background-color: cornflowerblue;
     color: whitesmoke;
+    font-size: 1.5rem;
     border: solid 1px mediumpurple;
     border-radius: 5px;
     box-shadow: 2px 2px 0px rgba(0, 0, 0, 0.05);
@@ -30,19 +30,23 @@ button {
 }
 
 button:hover {
-    box-shadow: 2px 2px 0px rgba(0, 0, 0, 0.1);
+    box-shadow: 2px 2px 0px rgba(0, 0, 0, 0.2);
 }
 
 button:active {
     border: transparent;
 }
 
+h1 {
+    font-size: 3rem;
+}
+
 h2 {
-    font-size: 1.5rem;
+    font-size: 2.5rem;
 }
 
 h3 {
-    font-size: 3rem;
+    font-size: 2rem;
     margin-bottom: 5px;
 }
 
@@ -78,5 +82,13 @@ h3 {
 }
 
 .card img {
+    width: 100%;
+}
+
+.search-bar {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 5px;
     width: 100%;
 }
