--- a/src/styles.css
+++ b/src/styles.css
@@ -20,13 +20,14 @@ input {
 
 button {
     padding: 10px 10px;
-    background-color: cornflowerblue;
+    background-color: #006494;
     color: whitesmoke;
     font-size: 1.5rem;
     border: solid 1px mediumpurple;
     border-radius: 5px;
     box-shadow: 2px 2px 0px rgba(0, 0, 0, 0.05);
     transition: 10ms;
+    cursor: pointer;
 }
 
 button:hover {
@@ -47,7 +48,6 @@ h2 {
 
 h3 {
     font-size: 2rem;
-    margin-bottom: 5px;
 }
 
 .card-grid {
@@ -70,6 +70,20 @@ h3 {
     margin-bottom: 20px;
     margin-right: 20px;
     overflow: hidden;
+}
+
+.card-grid-header {
+    display:flex;
+    gap: 5px;
+    align-items: center;
+    
+}
+
+.card-grid-header button {
+    background-color: blueviolet;
+    padding: 5px;
+    font-size: 1rem;
+   
 }
 
 .card p {
